--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
 .section {
-    border: solid black 3px;
+    border:3px solid black;
+ 
     display:flex;
+    justify-content: center;
 }
+#nav-bar {
+ height: 110px;
+}
+
+.nav-item {
+    border: 3px solid pink;
+    display: flex;
+    align-items: center;
+}
+
 
