--- a/style.css
+++ b/style.css
@@ -1,17 +1,40 @@
-.section {
-    border:3px solid black;
- 
-    display:flex;
-    justify-content: center;
-}
 #nav-bar {
- height: 110px;
+    height: 70px;
+    box-sizing: border-box;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    display:flex;
+    justify-content: space-between;
+    padding-left: 50px;
+    padding-right: 50px;
+    box-shadow: 0px 1px 1px 1px lightgray;
+
+}
+
+#nav-btns .nav-button {
+    background-color: transparent;
+    border: none;
+    font-size: 16px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#nav-btns {
+    /*border: 3px solid pink;*/
+    flex: 0.5;
+    max-width: 400px;
+    min-width: 250px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .nav-item {
-    border: 3px solid pink;
+    
     display: flex;
     align-items: center;
 }
 
+.nav-button {
+    height: 50px;
+    
+}
 
