--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 #nav-bar {
     height: 70px;
     box-sizing: border-box;
@@ -8,18 +12,17 @@
     padding-left: 50px;
     padding-right: 50px;
     box-shadow: 0px 1px 1px 1px lightgray;
-
 }
 
 #nav-btns .nav-button {
     background-color: transparent;
     border: none;
     font-size: 16px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    
 }
 
 #nav-btns {
-    /*border: 3px solid pink;*/
+    
     flex: 0.5;
     max-width: 400px;
     min-width: 250px;
@@ -28,7 +31,7 @@
 }
 
 .nav-item {
-    
+    border: 3px solid pink;
     display: flex;
     align-items: center;
 }
@@ -38,3 +41,8 @@
     
 }
 
+#nav-cta .nav-button {
+  border-radius: 10px;
+  width: 80px;
+  font-size: 16px;
+}
