--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     background-color: transparent;
     border: none;
     font-size: 16px;
-    
+ 
 }
 
 #nav-btns {
@@ -31,18 +31,29 @@
 }
 
 .nav-item {
-    border: 3px solid pink;
     display: flex;
     align-items: center;
 }
 
 .nav-button {
     height: 50px;
-    
 }
 
 #nav-cta .nav-button {
   border-radius: 10px;
-  width: 80px;
   font-size: 16px;
-}
+  padding: 15px;
+ }
+
+ #nav-cta {
+    display: flex;
+    gap: 20px;
+ }
+
+ #sign-up {
+    background-color: bisque;
+ }
+
+ #log-in {
+    background-color: white;
+ }
