--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     padding-bottom: 10px;
     display:flex;
     justify-content: space-between;
+
     padding-left: 50px;
     padding-right: 50px;
     box-shadow: 0px 1px 1px 1px lightgray;
@@ -17,22 +18,22 @@
 #nav-btns .nav-button {
     background-color: transparent;
     border: none;
-    font-size: 16px;
+    font-size: 18px;
  
 }
 
 #nav-btns {
-    
-    flex: 0.5;
-    max-width: 400px;
     min-width: 250px;
     display: flex;
     justify-content: space-around;
+    gap: 35px;
 }
 
 .nav-item {
     display: flex;
     align-items: center;
+
+
 }
 
 .nav-button {
@@ -56,4 +57,15 @@
 
  #log-in {
     background-color: white;
+ }
+
+#vpn {
+    max-width: 38px;
+    max-height: 32px;
+
+ }
+
+ #logo {
+    display:flex;
+    gap: 10px;
  }
