--- a/style.css
+++ b/style.css
@@ -2,6 +2,13 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+.main {
+    
+    display:flex;
+    flex-direction: column;
+   
+ }
+
 #nav-bar {
     height: 70px;
     box-sizing: border-box;
@@ -65,7 +72,36 @@
 
  }
 
+ #hero {
+    display:flex;
+
+ }
+
  #logo {
     display:flex;
     gap: 10px;
  }
+
+ /* Hero */
+
+ .col {
+    width: 50%;
+    border: solid red 1px;
+ }
+
+.col img {
+    width:100%;
+    height:auto;
+}
+
+#text {
+    margin: auto 0;
+}
+
+#CTACatchLine {
+    font-size: 30px;
+}
+
+#hero {
+    padding: 0 50px;
+}
