--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
     
     display:flex;
     flex-direction: column;
-   
+    padding: 0 50px;
  }
 
 #nav-bar {
@@ -84,7 +84,7 @@
 
  /* Hero */
 
- .col {
+ #hero .col {
     width: 50%;
     border: solid red 1px;
  }
@@ -103,5 +103,29 @@
 }
 
 #hero {
-    padding: 0 50px;
+
 }
+
+#stats {
+    display:flex;
+    background-color: grey;
+    justify-content: center;
+    gap: 20px;
+   
+}
+.item .col img {
+    border: solid black 1px;
+    border-radius: 30px;
+    width: 20px;
+    height: 20px;
+   
+}
+#stats .item {
+    border: dotted green 1px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+
+
