--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     padding-bottom: 10px;
     display:flex;
     justify-content: space-between;
-
+    z-index: 3;
     padding-left: 50px;
     padding-right: 50px;
     box-shadow: 0px 1px 1px 1px lightgray;
@@ -42,6 +42,9 @@
 
 }
 
+#hero {
+    z-index: 1;
+}
 
 .nav-button {
     height: 50px;
